<resources>
    <string name="app_name">Swapi</string>
    <string name="title_film_detail">Film Detail</string>
    <string name="opening_crawl">Opening Crawl:</string>
    <string name="release_date">Release Date:</string>
    <string name="director">Director:</string>
    <string name="producers">Producers:</string>
    <string name="birth_year">Birth Year:</string>
    <string name="eye_color">Eye Color</string>
    <string name="gender">Gender:</string>
    <string name="hair_color">Hair Color:</string>
    <string name="height">Height:</string>
    <string name="mass">Mass:</string>
    <string name="skin_color">Skin Color:</string>
    <string name="diameter">Diameter:</string>
    <string name="rotation_period">Rotation Period:</string>
    <string name="orbital_period">Orbital Period:</string>
    <string name="gravity">Gravity:</string>
    <string name="population">Population:</string>
    <string name="climates">Climates:</string>
    <string name="terrains">Terrains:</string>
    <string name="surface_water">Surface Water:</string>
    <string name="classification">Classification:</string>
    <string name="average_height">Average Height:</string>
    <string name="designation">Designation:</string>
    <string name="average_lifespan">Average Lifespan:</string>
    <string name="eye_colors">Eye Colors:</string>
    <string name="hair_colors">Hair Colors:</string>
    <string name="skin_colors">Skin Colors:</string>
    <string name="language">Language:</string>
    <string name="model">Model:</string>
    <string name="starship_class">Starship Class:</string>
    <string name="vehicle_class">Vehicle Class:</string>
    <string name="manufacturers">Manufacturers:</string>
    <string name="cost_in_credits">Cost In Credits:</string>
    <string name="length">Length:</string>
    <string name="crew">Crew:</string>
    <string name="passengers">Passengers:</string>
    <string name="max_atmosphering_speed">Max Atmosphering Speed:</string>
    <string name="hyperdrive_rating">Hyperdrive Rating:</string>
    <string name="mglt">MGLT:</string>
    <string name="cargo_capacity">Cargo Capacity:</string>
    <string name="consumables">Consumables:</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
</resources>
