<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Model Title and Text -->
    <TextView
        android:id="@+id/modelTitle"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/model"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/model"
        style="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="32dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context="com.jonahstarling.swapi.DetailFragment" />

    <!-- Starship Class Title and Text -->
    <TextView
        android:id="@+id/starshipClassTitle"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/starship_class"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/starshipClass"
        style="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="32dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context="com.jonahstarling.swapi.DetailFragment" />

    <!-- Vehicle Class Title and Text -->
    <TextView
        android:id="@+id/vehicleClassTitle"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_class"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/vehicleClass"
        style="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="32dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context="com.jonahstarling.swapi.DetailFragment" />

    <!-- Manufacturers Title and Text -->
    <TextView
        android:id="@+id/manufacturersTitle"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manufacturers"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/manufacturers"
        style="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="32dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context="com.jonahstarling.swapi.DetailFragment" />

    <!-- Cost In Credits Title and Text -->
    <TextView
        android:id="@+id/costInCreditsTitle"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cost_in_credits"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/costInCredits"
        style="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="32dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context="com.jonahstarling.swapi.DetailFragment" />

    <!-- Length Title and Text -->
    <TextView
        android:id="@+id/lengthTitle"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/length"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/length"
        style="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="32dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context="com.jonahstarling.swapi.DetailFragment" />

    <!-- Crew Title and Text -->
    <TextView
        android:id="@+id/crewTitle"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crew"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/crew"
        style="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="32dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context="com.jonahstarling.swapi.DetailFragment" />

    <!-- Passengers Title and Text -->
    <TextView
        android:id="@+id/passengersTitle"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passengers"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/passengers"
        style="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="32dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context="com.jonahstarling.swapi.DetailFragment" />

    <!-- Max Atmosphering Speed Title and Text -->
    <TextView
        android:id="@+id/maxAtmospheringSpeedTitle"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/max_atmosphering_speed"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/maxAtmospheringSpeed"
        style="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="32dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context="com.jonahstarling.swapi.DetailFragment" />

    <!-- Hyperdrive Rating Title and Text -->
    <TextView
        android:id="@+id/hyperdriveRatingTitle"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hyperdrive_rating"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/hyperdriveRating"
        style="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="32dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context="com.jonahstarling.swapi.DetailFragment" />

    <!-- MGLT Title and Text -->
    <TextView
        android:id="@+id/mgltTitle"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mglt"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mglt"
        style="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="32dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context="com.jonahstarling.swapi.DetailFragment" />

    <!-- Cargo Capacity Title and Text -->
    <TextView
        android:id="@+id/cargoCapacityTitle"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cargo_capacity"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/cargoCapacity"
        style="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="32dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context="com.jonahstarling.swapi.DetailFragment" />

    <!-- Consumables Title and Text -->
    <TextView
        android:id="@+id/consumablesTitle"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consumables"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/consumables"
        style="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="32dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context="com.jonahstarling.swapi.DetailFragment" />

</LinearLayout>